...
    required this.methodLabel,
    required this.amount,
    required this.transactionFee,
    required this.remainingBalance,
    required this.merchant,
    required this.categories,
    this.successTitle = 'Payment Successful!',
    this.successMethodLabel,
  });

  final String transactionId;
  final PaymentMethodType methodType;
  final String methodLabel;
...
